[gd_scene load_steps=3 format=3 uid="uid://cvi7rgi3usqgx"]

[ext_resource type="Script" path="res://ExampleScenes-Godot4/Chapter_09_Evolutionary_Computing/A_Exercise_09_01_CatString/Exercise_09_01_RandomWord.gd" id="1_bvtl3"]

[sub_resource type="FontFile" id="FontFile_t3sfk"]
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/100/0 = Vector2(0, 0)
cache/0/100/0/ascent = 0.0
cache/0/100/0/descent = 0.0
cache/0/100/0/underline_position = 0.0
cache/0/100/0/underline_thickness = 0.0
cache/0/100/0/scale = 1.0
cache/0/100/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/100/0/kerning_overrides/100/0 = Vector2(0, 0)

[node name="E0901" type="Control" node_paths=PackedStringArray("timer_label", "cycles_label", "string_label", "guesses_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvtl3")
timer_label = NodePath("VBoxContainer/timer_label")
cycles_label = NodePath("VBoxContainer/cycles_label")
string_label = NodePath("string_label")
guesses_label = NodePath("guesses")

[node name="Lines" type="Node2D" parent="."]

[node name="guesses" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "cycles = 0"
autowrap_mode = 2
clip_text = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.694118)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="timer_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "cycles = 0"
autowrap_mode = 2

[node name="cycles_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "cycles = 0"
autowrap_mode = 2

[node name="string_label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_constants/outline_size = 14
theme_override_fonts/font = SubResource("FontFile_t3sfk")
theme_override_font_sizes/font_size = 100
text = "to be or not to be"
horizontal_alignment = 1
vertical_alignment = 1
